suite/tests/decls/valid/static-extern-int.c
static int foo = 3;

int main(void)
{
    return foo;
}

extern int foo;
