suite/tests/decls/invalid/static-with-extern.c
int main(void)
{
    static extern int foo;
}
